@@ -3,6 +3,7 @@ Revision history for Math-GComplex
 0.11    2018-??-??
 
         - Added the `pown` method for computing `x**n` where `n` is a native integer (using the exponentiation by squaring method).
+        - Added the bitwise methods: `lsft`, `rsft`, `and`, `or`, `xor`, which also provide support for operator overloading of `<<`, `>>`, `&`, `|` and `^`.
 
 0.10    2018-10-13
 
